package baseline;

public class Item {
    //items within a to do list should include a description and due date
    String description;
    String dueDate;
    boolean completion;


    //sets new item
    public Item(String description, String dueDate) {

        //use this. statements to set them

        //will set item completion to false from the start.
    }

    //gets description
    public String getDescription() {
        return description;
    }


    //gets due date
    public String getDueDate() {
        return dueDate;
    }


}
