@startuml
'https://plantuml.com/sequence-diagram

class Application
{
    +main(String[])
    -String getListTitleInput()
    +ToDoList createList(String title)
    +ToDoList addItemToList(ToDoList listOne, Item item)
    +Item searchForItem(ToDoList list, String name)
    +ToDoList removeItemFromList(ToDoList list, Item item)
    +Item editItemDescription(Item item)
    +Item editDueDate(Item item)
    -Item markItemComplete(Item item)
    -displayList(ToDoList list)
    -displayIncompleteItems(ToDoList list)
    -displayCompleteItems(ToDoList list)
    +File saveList(ToDoList list)
    +ToDoList loadList(String name)


}


class ToDoList
{
    String: title;
    -int capacity
    List<Item>: items
    +int getCapacity()
    +String getTitle()
    +ToDoList()
}

class Item
{
    String: description
    String: dueDate
    boolean: completion
    +Item(String description, String dueDate)
    +String getDescription()
    +String getDueDate()
}



Application --o ToDoList
Application --o Item


@enduml